# AutoAPI

./: .gitmodules  Cargo.toml  flake.nix  rustfmt.toml
auto_api/: Cargo.toml
auto_api/src/: lib.rs
auto_api_core/: Cargo.toml
auto_api_core/src/: error.rs  lib.rs
auto_api_core/src/client/: base.rs
auto_api_macros/: Cargo.toml
auto_api_macros/src/: args.rs  documentation.rs  lib.rs  model.rs  operation.rs  path.rs  reference.rs  utils.rs
auto_api_macros/src/agnostic/: operation.rs
auto_api_macros/src/utils/: casing.rs  mod.rs
example/: Cargo.toml
example/openapi/: petstore.json
example/src/: main.rs  testing.rs
